--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^7.5.0",
+    "@react-three/fiber": "^7.0.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.0",
+    "drei": "^2.2.21",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.5",
+    "react-colorful": "^5.3.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-three-fiber": "5.3.1",
+    "three": "0.122.0",
+    "use-cannon": "^0.5.3",
+    "valtio": "^1.2.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
